--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "konvoo",
+  "name": "NodeJS backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Amaan-Haider",
+  "author": "Adityaraj-Singh",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
