--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "name": "Konvoo",
+    "name": "NodeJS backend",
     "builds": [
        { "src": "index.js", "use": "@vercel/node" }
     ],
